<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <!--NEH-->
        <TextView
            android:id="@+id/title_neh"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/title_neh"
            android:textSize="15dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_neh"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:drawableLeft="@drawable/ic_call_black_24dp" />

            <TextView
                android:id="@+id/number_neh"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/number_neh"
                android:layout_margin="15dp"
                android:textSize="12dp"/>
        </LinearLayout>
        <!--DSWD-->
        <TextView
            android:id="@+id/title_dswd"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/title_dswd"
            android:textSize="15dp"
            android:layout_marginTop="15dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_dswd1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:drawableLeft="@drawable/ic_call_black_24dp" />

            <TextView
                android:id="@+id/number_dswd1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/number_dswd1"
                android:layout_margin="15dp"
                android:textSize="12dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_dswd2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:drawableLeft="@drawable/ic_call_black_24dp" />

            <TextView
                android:id="@+id/number_dswd2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/number_dswd2"
                android:layout_margin="15dp"
                android:textSize="12dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_dswd3"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:drawableLeft="@drawable/ic_call_black_24dp" />

            <TextView
                android:id="@+id/number_dswd3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/number_dswd3"
                android:layout_margin="15dp"
                android:textSize="12dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_dswd4"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:drawableLeft="@drawable/ic_call_black_24dp" />

            <TextView
                android:id="@+id/number_dswd4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/number_dswd4"
                android:layout_margin="15dp"
                android:textSize="12dp"/>
        </LinearLayout>
        <!--Philippine Red Cross-->
        <TextView
            android:id="@+id/title_prc"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/title_prc"
            android:textSize="15dp"
            android:layout_marginTop="15dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_prc1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:drawableLeft="@drawable/ic_call_black_24dp" />

            <TextView
                android:id="@+id/number_prc1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/number_prc1"
                android:layout_margin="15dp"
                android:textSize="12dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_prc2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:drawableLeft="@drawable/ic_call_black_24dp" />

            <TextView
                android:id="@+id/number_prc2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/number_prc2"
                android:layout_margin="15dp"
                android:textSize="12dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_prc3"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:drawableLeft="@drawable/ic_call_black_24dp" />

            <TextView
                android:id="@+id/number_prc3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/number_prc3"
                android:layout_margin="15dp"
                android:textSize="12dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_prc4"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:drawableLeft="@drawable/ic_call_black_24dp" />

            <TextView
                android:id="@+id/number_prc4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/number_prc4"
                android:layout_margin="15dp"
                android:textSize="12dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_prc5"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:drawableLeft="@drawable/ic_call_black_24dp" />

            <TextView
                android:id="@+id/number_prc5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/number_prc5"
                android:layout_margin="15dp"
                android:textSize="12dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_prc6"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:drawableLeft="@drawable/ic_call_black_24dp" />

            <TextView
                android:id="@+id/number_prc6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/number_prc6"
                android:layout_margin="15dp"
                android:textSize="12dp"/>
        </LinearLayout>
        <!--MMDA-->
        <TextView
            android:id="@+id/title_mmda"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/title_mmda"
            android:textSize="15dp"
            android:layout_marginTop="15dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_mmda1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:drawableLeft="@drawable/ic_call_black_24dp" />

            <TextView
                android:id="@+id/number_mmda1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/number_mmda1"
                android:layout_margin="15dp"
                android:textSize="12dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_mmda2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:drawableLeft="@drawable/ic_call_black_24dp" />

            <TextView
                android:id="@+id/number_mmda2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/number_mmda2"
                android:layout_margin="15dp"
                android:textSize="12dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_mmda3"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:drawableLeft="@drawable/ic_call_black_24dp" />

            <TextView
                android:id="@+id/number_mmda3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/number_mmda3"
                android:layout_margin="15dp"
                android:textSize="12dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_mmda4"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:drawableLeft="@drawable/ic_call_black_24dp" />

            <TextView
                android:id="@+id/number_mmda4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/number_mmda4"
                android:layout_margin="15dp"
                android:textSize="12dp"/>
        </LinearLayout>
    </LinearLayout>


</ScrollView>


